updated the route to be /receipts/ instead of singular /receipt/
